examples/noauth/src/echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        # image: registry.k8s.io/e2e-test-images/agnhost:2.55
        image: gcr.io/k8s-staging-gateway-api/echo-basic:v20250527-v1.3.0-18-g54df0a89@sha256:a970d3f2c574791dbb8d8c23b90437ceaa661df5159701219f970f9d3ef09b22
        ports:
        - containerPort: 3000
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
