examples/noauth/src/external-http-route.yaml
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: external
spec:
  parentRefs:
  - kind: Gateway
    name: external
    # Will kustomize add this?
    # namespace: gateway-v4
  # hostnames:
  # - "localhost"
  rules:
  - backendRefs:
    - name: g5y-headless
      port: 8080
